--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CavasSample</string>
+    <string name="app_name">CanvasSample</string>
     <string name="action_settings">设置</string>
 </resources>
