让NavigationBarIconView支持4种样式。并且增加辅助服务，实现返回键、Home键、任务键。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CanvasSample</string>
     <string name="action_settings">设置</string>
+
+    <string name="accessibility_desc">开启导航栏辅助功能</string>
 </resources>
